# problem_solver

./: README.md
docs/: ClassDiagramMachine.vsdx  ClassDiagramServer.vsdx  FlowChartMachine.vsdx  FreshDesk.doc  instructions.txt  podobni produkti.doc  problem solving.xls  terms.txt  terms.xls  things_for_future_improve.txt  things_in_code_that_need_refactoring.txt  things_to_finish.txt  things_to_improve.txt  zadachi.xls
docs/diagrams/code/: ClassDiagramMachine.vsdx  ClassDiagramServer.vsdx  FlowChartSystem.vsdx  KnowledgeBase_ISP.vsdx  SystemOverview.vsdx  SystemOverviewBasic.vsdx  SystemOverviewCompact.vsdx  category_tree.vsdx
docs/draft/: Любомир Станков - Примерно (1) Предложение за възлагане на дипломна работа.doc  Любомир Станков - Примерно (2) Предложение за възлагане на дипломна работа.doc  Любомир Станков - Примерно Съдържание.doc  Любомир Станков - Шаблон за магистърска работа.docx
docs/official/: Presentation annotation.doc  deployment_istructions.txt  problem_solver.ppt  Любомир Станков - Предложение.doc  Любомир Станков - дипломна работа.doc
source/problem_solver/: CMakeLists.txt
source/problem_solver/datalayer/include/: cachingdatalayer.h  datalayer.h  datalayerread.h  memorydatalayer.h  mongodbdatalayer.h  mysqldatalayer.h
source/problem_solver/datalayer/include/mongodb/: mongoconnection.h  mongodbdatalayer.h
source/problem_solver/datalayer/src/: cachingdatalayer.cpp  memorydatalayer.cpp  mongodbdatalayer.cpp  mysqldatalayer.cpp
source/problem_solver/datalayer/src/mongodb/: mongodbdatalayer.cpp
source/problem_solver/objects/include/: baseexception.h  category.h  difficulty.h  genericinfo.h  identifier.h  investigation.h  problem.h  solution.h  symptom.h
source/problem_solver/server/: .directory
source/problem_solver/server/include/: jsonserialization.h  remotejsonmanager.h
source/problem_solver/server/src/: jsonserialization.cpp  remotejsonmanager.cpp  solvingserver.cpp
source/problem_solver/system/include/: solvingmachine.h  systemmanager.h
source/problem_solver/system/src/: solvingmachine.cpp  systemmanager.cpp
source/problem_solver/tests/: createdatabase.cpp  helloworld.cpp  systemtest.cpp
source/problem_solver/utils/include/: utils.h
source/problem_solver/utils/src/: utils.cpp
